--- a/TRACK.html
+++ b/TRACK.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="STYLESHEET" href="STYLE.css">
+	<link rel="STYLESHEET" href="./ASSETS/STYLE.css">
 	<title>KEEP'N TRACK</title>
 </head>
 <body>
