--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="STYLESHEET" href="./assets/STYLE.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 	<title>KEEP'N TRACK</title>
 </head>
 <body>
     <h1>PENNY-WISE</h1>
-    <div class="input-section">
+    <div class="input-section md:flex flex-wrap">
         <label for="category-select">Category:</label>
         <select id="category-select">
             <option value="Food & necessities">Food & necessities</option>
@@ -16,21 +17,21 @@
             <option value="Transport">Transport</option>
             <option value="Un-necessary">Un-necessary</option>
         </select>
-        <label for="amount-input">Amount:</label>
+        <label for="amount-input">AMOUNT:</label>
         <input type="number" id="amount-input">
-        <label for="date-input">Date:</label>
+        <label for="date-input">DATE:</label>
         <input type="date" id="date-input">
-        <button id="add-btn">Add</button>
+        <button id="add-btn">ADD</button>
     </div>
-    <div class="expenses-list">
-        <h2>Expenses List</h2>
+    <h2><b>EXPENSE LIST </b></h2>
+    <div class="expenses-list md:flex flex-wrap">
         <table>
             <thead>
                 <tr>
-                    <th>Category</th>
-                    <th>Amount</th>
-                    <th>Date</th>
-                    <th>Delete</th>
+                    <th>CATEGORY</th>
+                    <th>AMOUNT</th>
+                    <th>DATE</th>
+                    <th>DELETE</th>
                 </tr>
             </thead>
             <tbody id="expnese-table-body">
@@ -38,7 +39,7 @@
             </tbody>
             <tfoot>
                 <tr>
-                    <td>Total:</td>
+                    <td><b>Total:</b></td>
                     <td id="total-amount"></td>
                     <td></td>
                     <td></td>
