--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>KEEP'N TRACK</title>
 </head>
 <body>
-    <h1>PENNY-WISE</h1>
+    <h1 class="title">PENNY-WISE</h1>
     <div class="input-section md:flex flex-wrap">
         <label for="category-select">Category:</label>
         <select id="category-select">
@@ -17,13 +17,13 @@
             <option value="Transport">Transport</option>
             <option value="Un-necessary">Un-necessary</option>
         </select>
-        <label for="amount-input">AMOUNT:</label>
+        <label for="amount-input">Amount:</label>
         <input type="number" id="amount-input">
-        <label for="date-input">DATE:</label>
+        <label for="date-input">Date:</label>
         <input type="date" id="date-input">
-        <button id="add-btn">ADD</button>
+        <button id="add-btn">Add</button>
     </div>
-    <h2><b>EXPENSE LIST </b></h2>
+    <h2 class="table-title">EXPENSE LIST</h2>
     <div class="expenses-list md:flex flex-wrap">
         <table>
             <thead>
